--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">PassportPhotoCreator</string>
+    <string name="ok">OK</string>
+    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
+    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
+    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
+    <string name="title_activity_main">Passport Photo Creator application</string>
+    <string name="header">Passport photo Creator</string>
+    <string name="text">This application runs in portrait mode and uses front camera only.
+            Recommended distance between camera and phtographed face is 2m.
+            It is possible to zoom in to have better preview.</string>
+    <string name="take_photo_button">Take a shot</string>
+    <string name="take_photo">Take a photo</string>
 </resources>
