--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="take_photo_button">Take a shot</string>
     <string name="take_photo">Take a photo</string>
     <string name="no_background_verification_error">Could not initialize background verification. Application will run without it.</string>
+    <string name="no_face_shadow_removal_error">Could not initialize shadow removal. Application will run without it.</string>
     <string name="no_face_on_the_picture">Did not find face on the picture. Cannot make a photo.</string>
     <string name="image_saved">Image Saved!</string>
     <string name="image_not_saved">ERROR! Image Could not be Saved.</string>
