Display captured image and add possibility of saving or cancelling it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="image_saved">Image Saved!</string>
     <string name="image_not_saved">ERROR! Image Could not be Saved.</string>
     <string name="cannot_make_a_picture">Could not make a picture. Make sure that the rectangle around the face is fully visible.</string>
+    <string name="image_preview">Captured image:</string>
 </resources>
