--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">PassportPhotoCreator</string>
-    <string name="ok">OK</string>
-    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
-    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
-    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
-    <string name="title_activity_main">Passport Photo Creator application</string>
     <string name="header">Passport photo Creator</string>
     <string name="text">This application runs in portrait mode and uses front camera only.
-            Recommended distance between camera and phtographed face is 2m.
+            Recommended distance between camera and photographed face is 2m.
             It is possible to zoom in to have better preview.</string>
     <string name="take_photo_button">Take a shot</string>
     <string name="take_photo">Take a photo</string>
     <string name="no_background_verification_error">Could not initialize background verification and enhancement. Application will run without it.</string>
     <string name="no_face_shadow_removal_error">Could not initialize shadow removal. Application will run without it.</string>
-    <string name="no_face_on_the_picture">Did not find face on the picture. Cannot make a photo.</string>
     <string name="image_saved">Image Saved!</string>
     <string name="image_not_saved">ERROR! Image Could not be Saved.</string>
     <string name="cannot_make_a_picture">Could not make a picture. Make sure that there is exactly one rectangle around the face and it is fully visible.</string>
     <string name="picture_making_failed">Picture making failed. Try again.</string>
     <string name="wait_for_a_picture">Please wait while the picture is being processed. It will be displayed soon. It can take few seconds.</string>
     <string name="image_preview">Captured image:</string>
+    <string name="successfully_saved">The picture was successfully saved in: %s</string>
+    <string name="taken_image">Make sure that the image fulfills all requirements</string>
+
+
+    <string name="b_save">Save</string>
+    <string name="b_save_multiple">Save multiple</string>
+    <string name="b_cancel">Cancel</string>
 </resources>
